--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 #<------ LOGGING ------>#
 logging.level.root=WARN
-logging.level.com.princess.taskapi=DEBUG
+logging.level.com.princess.shopapi=DEBUG
 logging.level.org.hibernate.SQL=INFO
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #logging.level.org.springframework.security=DEBUG
